# cacheorm

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: benchmark.yaml  deploy.yaml  test.yaml
docs/benchmark/: data.js
src/cacheorm/: __init__.py  backends.py  fields.py  index.py  model.py  models.py  payload.py  serializers.py  types.py
tests/: conftest.py  test_backends.py  test_models.py  test_serializers.py  test_types.py
tests/protos/: person.proto  person_pb2.py  user.proto  user_pb2.py
tests/test_fields/: base_models.py  test_foreign_key_field.py  test_models.py  test_normal_fields.py
tests/test_models/: base_models.py  conftest.py  test_benchmark.py  test_create.py  test_delete.py  test_get.py  test_index.py  test_insert.py  test_query.py  test_update.py
