[metadata]
license_file = LICENSE

[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests
addopts = --ff --strict -vvl --cov=src/cacheorm --cov=tests --cov-report=term-missing --cov-fail-under=95

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 88
known_third_party = cacheorm,google,mock,pytest,setuptools

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# N8 = pep-naming
# C = mccabe
select = B, E, F, W, B9, N8, C
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 88
max-complexity = 8
per-file-ignores =
    # __init__ modules export names; unable to detect undefined names
    **/__init__.py: F401, F403
exclude = tests/protos
